--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
                     <li><a href="" class="nav-link">Portfolio</a></li>
                     <li><a href="" class="nav-link">Contacts</a></li>
                 </ul>
+                <button type="button" class="menu-btn">
+                    <svg class="menu-btn-icon" width="17" height="15">
+                        <use href="./images/icons.svg#icon-burger-menu"></use>
+                    </svg>
+                </button>
             </nav>
             <address>
                 <ul class="contacts">
