add-mobile-menu

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <div class="card-caption">
                             <h3 class="card-header">Mark Guerrero</h3>
                             <p class="card-text">Product Designer</p>
-                            <ul class="section-two-socials">
+                            <ul class="socials section-two-socials">
                                 <li class="socials-list-item">
                                     <a href="#" class="socials-background">
                                         <svg class="socials-icon" width="16" height="16">
@@ -149,7 +149,7 @@
                         <div class="card-caption">
                             <h3 class="card-header">Tom Ford</h3>
                             <p class="card-text">Frontend Developer</p>
-                            <ul class="section-two-socials">
+                            <ul class="socials section-two-socials">
                                 <li class="socials-list-item">
                                     <a href="#" class="socials-background">
                                         <svg class="socials-icon" width="16" height="16">
@@ -185,7 +185,7 @@
                         <div class="card-caption">
                             <h3 class="card-header">Camila Garcia</h3>
                             <p class="card-text">Marketing</p>
-                            <ul class="section-two-socials">
+                            <ul class="socials section-two-socials">
                                 <li class="socials-list-item">
                                     <a href="#" class="socials-background">
                                         <svg class="socials-icon" width="16" height="16">
@@ -221,7 +221,7 @@
                         <div class="card-caption">
                             <h3 class="card-header">Daniel Wilson</h3>
                             <p class="card-text">UI Designer</p>
-                            <ul class="section-two-socials">
+                            <ul class="socials section-two-socials">
                                 <li class="socials-list-item">
                                     <a href="#" class="socials-background">
                                         <svg class="socials-icon" width="16" height="16">
@@ -469,6 +469,58 @@
     </div>
     <!-- #endregion -->
 
+    <!-- #region Mobile menu -->
+    <div class="mobile-menu">
+        <button type="button" class="mobile-menu-close" aria-label="Close menu button">
+            <svg class="mobile-close-icon" width="8" height="8">
+                <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+        </button>
+        <ul class="mobile-menu-list">
+            <li class="mobile-menu-item"><a href="" class="mobile-menu-link">Studio</a></li>
+            <li class="mobile-menu-item"><a href="" class="mobile-menu-link">Portfolio</a></li>
+            <li class="mobile-menu-item"><a href="" class="mobile-menu-link">Contacts</a></li>
+        </ul>
+        <div class="mobile-menu-address">
+            <ul class="mobile-menu-contacts">
+                <li class="mobile-contacts-item"><a href="#" class="mobile-contacts-link">+11 (000) 111-11-11</a></li>
+                <li class="mobile-contacts-item"><a href="#" class="mobile-contacts-link">info@devstudio.com</a></li>
+            </ul>
+        </div>
+        <div class="mobile-menu-socials">
+            <ul class="socials mobile-socials-list">
+                <li class="socials-list-item">
+                    <a href="#" class="socials-background">
+                        <svg class="socials-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-instagram-2"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="socials-list-item">
+                    <a href="#" class="socials-background">
+                        <svg class="socials-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="socials-list-item">
+                    <a href="#" class="socials-background">
+                        <svg class="socials-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="socials-list-item">
+                    <a href="#" class="socials-background">
+                        <svg class="socials-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <!-- #endregion -->
 </body>
 
 </html>
